--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.4.4",
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "core-js": "^3.4.4",
+    "jsonp": "^0.2.1",
+    "pdfjs-dist": "^2.2.228",
+    "socket.io-client": "^2.3.0",
+    "vant": "^2.4.1",
     "vue": "^2.6.10",
-    "axios": "^0.19.0"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "autoprefixer": "^7.1.2",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "vue-template-compiler": "^2.6.10"
@@ -37,6 +45,11 @@
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
     }
   },
   "browserslist": [
